# wmc

./: .gitignore  .tokeignore  Jenkinsfile  LICENSE  README.rst  setup.cfg  setup.py  tox.ini
examples/: basic_command.py  plugin_cls.py  plugin_func.py  test.py  test0.py  test00.py
examples/test/: info.json
test1/: data.json
tests/: test_assemble.py  test_basic.py  test_cli.py  test_commands.py  test_dispatch.py  test_project.py  test_utils.py
wmc/: __init__.py  __main__.py  assemble.py  basic.py  cli.py  commands.py  default.py  dispatch.py  project.py  utils.py
wmc/commands/: __init__.py  record.py
