[metadata]
name = wmc
description = Watch me coding, a toolbox
url = https://github.com/axju/wmc
author = axju
author_email = axel.juraske@short-report.de
license = MIT
long_description = file: README.rst
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[tox:tox]
envlist = py35, py36, py37, flake8, pylama, pylint
skipt_missing_interpreters = True

[testenv]
commands = python -m unittest discover -v

[testenv:pylama]
deps = pylama
commands = pylama wmc

[flake8]
max-line-length = 160

[pylint]
max-line-length = 160
ignore=E0401

[pylama]
format = pylint
skip = */.tox/*,*/.env/*
linters = pylint,mccabe
