[metadata]
name = wmc
description = Watch me coding, a toolbox
url = https://github.com/axju/wmc
author = axju
author_email = axel.juraske@short-report.de
license = MIT
long_description = file: README.rst
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[tox:tox]
envlist = py35, py36, py37, py38, flake8, pylint
skipt_missing_interpreters = True

[testenv]
commands = python -m unittest discover -v

[testenv:flake8]
deps = flake8
commands = flake8 wmc

[testenv:pylint]
deps = pylint
commands = pylint --rcfile=setup.cfg wmc

[flake8]
max-line-length = 160

[pylint]
disable = R0801, W0102, W0613, W0703
max-line-length = 160
